feat: open volume banner video

--- a/NHH_netflix/src/app/pages/browse/browse.component.html
+++ b/NHH_netflix/src/app/pages/browse/browse.component.html
@@ -4,12 +4,13 @@
     <!-- banner -->
     <div class="banner">
         <img class="banner-img" [src]="tmcbConfig.imagePath + bannerMovie.poster_path" alt="movie">
-<!-- 
-        @if(bannerMovie && bannerMovie.videoKey){
-        <iframe
-      class="banner-video"
-      [src]=" domSanitise.bypassSecurityTrustResourceUrl('https://www.youtube.com/embed/' + bannerMovie.videoKey + '?autoplay=1&mute=1&showinfo=0&controls=0')"
-      frameborder="0"></iframe>
+        
+        <!-- @if(bannerMovie && bannerMovie.videoKey){
+            <iframe
+         class="banner-video"
+         [src]="domSanitise.bypassSecurityTrustResourceUrl('https://www.youtube.com/embed/' + bannerMovie.videoKey + '?autoplay=1&mute=1&showinfo=0&controls=0')"
+         frameborder="0"></iframe>
+            
         }
         @else{
         <img class="banner-img" [src]="tmcbConfig.imagePath + bannerMovie.poster_path" alt="movie">
@@ -17,16 +18,18 @@
         <div class="banner-movie-info">
             <h4 class="banner-heading text-gray-50">{{bannerMovie.title}}</h4>
             <p class="banner-description">{{bannerMovie.overview}}</p>
+            <div class="flex items-center"> 
             <div class="banner-action">
                 <button class="play-btn flex">
                     <mat-icon>play_arrow</mat-icon>
-                    <span>Play</span>
+                    <span tyle="padding:1px">Play</span>
                 </button>
                 <button class="info-btn flex" (click)="openSignUpForm()"> 
                     <mat-icon>error_outline</mat-icon>
                     <button class="px-1" mat-button >More Info</button> 
                 </button>
             </div>
+        </div>
         </div>
     </div>
     <!-- categories movie -->
@@ -35,8 +38,8 @@
         <!-- <app-movie-category [title]="'Playlist'" [movieList]="nowPlayMovies"></app-movie-category>
         <app-movie-category [title]="'Top Rated'" [movieList]="topRateMovies"></app-movie-category>
         <app-movie-category [title]="'Upcoming'" [movieList]="upComingMovies"></app-movie-category> -->
-        <!-- <app-movie-category [title]="'Now playing'" [movieList]="nowPlayMovies"></app-movie-category> -->
-        <!-- <app-movie-category [title]="'Coming'" [movieList]="upComingMovies"></app-movie-category> -->
+        <!-- <app-movie-category [title]="'Now playing'" [movieList]="nowPlayMovies"></app-movie-category>
+        <app-movie-category [title]="'Coming'" [movieList]="upComingMovies"></app-movie-category> -->
     </div>
     <!-- footer -->
     <div>
