--- a/NHH_netflix/src/app/components/movie-category/movie-category.component.html
+++ b/NHH_netflix/src/app/components/movie-category/movie-category.component.html
@@ -1,5 +1,5 @@
 <div class="card mt-2">
-    <!-- <h4 class="text-white font-bold mb-4 text-xl uppercase">{{title}}</h4> -->
+    <h4 class="text-white font-bold mb-4 text-xl uppercase">{{title}}</h4>
     <p-carousel [value]="movieList" [numVisible]="3" [numScroll]="1" [responsiveOptions]="responsiveOptions">
         <ng-template let-product pTemplate="item">
             <div class="product-item">
