feat: add page search

--- a/NHH_netflix/src/app/components/footer/footer.component.html
+++ b/NHH_netflix/src/app/components/footer/footer.component.html
@@ -51,5 +51,5 @@
         }
     </div>
     <div class="name text-white justify-end">&copy; 2024 - Clone by NguyenHongHa</div>
-    <div>ssss</div>
+    <div>a</div>
 </div>
