--- a/NHH_netflix/src/app/components/header/header.component.html
+++ b/NHH_netflix/src/app/components/header/header.component.html
@@ -1,6 +1,8 @@
 <div class="header">
     <mat-icon class="header-menu" (click)="selectHeaderMenu()">menu</mat-icon>
-    <img [src]="logoURL" alt="logo" class="w-52" >
+    <a href="">
+    <img [src]="logoURL" alt="logo" class="w-52">
+    </a>
     <ul class="navigation-menu" [ngClass]="hiddenHeader ? 'd-block' : 'd-none'">
         @for( menu of menuHeader; track menu){
         <div class="menu-items">{{menu}}</div>
@@ -8,13 +10,17 @@
     </ul>
     <ul class="element" [ngClass]="hiddenHeader ? 'd-block' : 'd-none'">
         <div class="search-element" (click)="Search()" (mouseleave)="hiddenSeach()">
-            <div class="container">
+            <div class="container" (keydown)="onKeydown($event)">
                 <input checked="" class="checkbox" type="checkbox">
                 <div class="mainbox">
                     <div class="iconContainer">
-                        <svg viewBox="0 0 512 512" height="1em" xmlns="http://www.w3.org/2000/svg" class="search_icon"><path d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z"></path></svg>
+                        <svg viewBox="0 0 512 512" height="1em" xmlns="http://www.w3.org/2000/svg" class="search_icon">
+                            <path
+                                d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z">
+                            </path>
+                        </svg>
                     </div>
-                 <input class="search_input" placeholder="search" type="text">
+                    <input class="search_input" placeholder="search" type="text">
                 </div>
             </div>
 
@@ -56,7 +62,7 @@
         </li>
         <!-- <li class="items-icon info"><mat-icon class="text-xs">arrow_drop_down</mat-icon></li> -->
     </ul>
-@if (!hiddenMenuMobile) {
+    @if (!hiddenMenuMobile) {
     <div class="header-mobile">
         <div class="account flex">
             <img src="../../../assets/images/m_1.jpg" style="width: 40px" alt="acc">
@@ -68,9 +74,9 @@
         <hr class="my-2">
         <div class="element-mobile">
             @for(menu of menuHeader; track menuHeader){
-                <div class="menu-select"><a>{{menu}}</a></div>
+            <div class="menu-select"><a>{{menu}}</a></div>
             }
         </div>
     </div>
-}
+    }
 </div>
