--- a/NHH_netflix/src/app/pages/browse/browse.component.html
+++ b/NHH_netflix/src/app/pages/browse/browse.component.html
@@ -22,11 +22,11 @@
             <div class="banner-action">
                 <button class="play-btn flex">
                     <mat-icon>play_arrow</mat-icon>
-                    <span tyle="padding:1px">Play</span>
+                    <span style="padding:2px">Play</span>
                 </button>
                 <button class="info-btn flex" (click)="openSignUpForm()"> 
                     <mat-icon>error_outline</mat-icon>
-                    <button class="px-1" mat-button >More Info</button> 
+                    <button class="px-2" style="padding-top:2px" mat-button >More Info</button> 
                 </button>
             </div>
         </div>
