--- a/NHH_netflix/src/app/components/footer/footer.component.scss
+++ b/NHH_netflix/src/app/components/footer/footer.component.scss
@@ -75,3 +75,80 @@
         }
     }
 }
+
+
+// reponsive tablet, mobile
+@media (max-width: 1400px) {
+    
+}
+
+@media (max-width: 975px) {
+    .footer{
+        margin:0px 2rem;
+        .content{
+            .content-items{
+                width: 180px;
+                opacity: 1;
+                white-space: pre-line;
+                padding: 0px 10px;
+            }
+        }
+    }
+}
+
+@media (max-width: 750px) {
+    .footer{
+        margin:0px 2rem;
+        .content{
+            .content-items{
+                width: 180px;
+                opacity: 1;
+                white-space: pre-line;
+                padding: 0px 10px;
+            }
+        }
+    }
+}
+
+@media (max-width: 670px) {
+    .footer{
+        margin:0px 2rem;
+        .content{
+            .content-items{
+                width: 180px;
+                opacity: 1;
+                white-space: pre-line;
+                padding: 0px 10px;
+            }
+        }
+    }
+}
+
+@media (max-width: 530px) {
+    .footer{
+        margin:0px 2rem;
+        .content{
+            .content-items{
+                width: 180px;
+                opacity: 1;
+                white-space: pre-line;
+                padding: 0px 10px;
+            }
+        }
+    }
+}
+
+@media (max-width: 460px) {
+    .footer{
+        margin:0px 2rem;
+        .content{
+            .content-items{
+                width: 120px;
+                opacity: 1;
+                white-space: pre-line;
+                padding: 0px 10px;
+                font-size:12px
+            }
+        }
+    }
+}
