browse : fix icon sound

--- a/NHH_netflix/src/app/pages/browse/browse.component.scss
+++ b/NHH_netflix/src/app/pages/browse/browse.component.scss
@@ -1,21 +1,40 @@
 .browse-page {
   background-color: rgb(28, 28, 28);
+
   .banner {
     height: 100vh;
     width: 100vw;
+
     .banner-img {
       position: absolute;
       top: 0;
       width: 100%;
       height: 100%;
     }
-    .banner-video{
+
+    .banner-video {
       position: absolute;
-      top:0;
+      top: 0;
       width: 100%;
       height: 100%;
     }
   }
+
+  .icon_volume {
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    top: 550px;
+    right: 0;
+    cursor: pointer;
+    background-color: rgba(0, 0, 0, 0.7);
+    margin-right: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+  }
+
   .banner-movie-info {
     width: 40%;
     color: rgb(192, 192, 192);
@@ -26,50 +45,57 @@
     top: 30%;
     padding-left: 2rem;
     padding-left: 60px;
+
     .banner-heading {
       font-size: 48px;
       font-weight: bold;
       font-family: fantasy;
-      line-height:1.2;
-      
+      line-height: 1.2;
+
     }
+
     .banner-description {
       font-size: 16px;
-      margin-top:20px;
+      margin-top: 20px;
       // font-weight: 400;
-      font-family:'Times New Roman', Times, serif ;
+      font-family: 'Times New Roman', Times, serif;
       text-align: justify;
 
     }
+
     .banner-action {
       font-weight: bold;
       font-size: 20px;
       display: flex;
       justify-content: start;
-      margin-top:32px;
+      margin-top: 32px;
       outline: none;
       font-size: 13px;
+
       .play-btn {
         border-radius: 4px;
         background-color: white;
         color: black;
         margin: 10px;
         padding: 10px 35px;
-        &:hover{
+
+        &:hover {
           opacity: 0.8;
         }
       }
+
       .info-btn {
         padding: 10px 40px;
         background-color: rgba($color: #515151, $alpha: 0.8);
-         border-radius: 4px;
-        color:white;
+        border-radius: 4px;
+        color: white;
         margin: 10px;
-        &:hover{
+
+        &:hover {
           opacity: 0.8;
         }
       }
-      
+
     }
   }
 }
@@ -79,65 +105,65 @@
 
 // reponsive tablet, mobile
 @media (max-width: 460px) {
-  .movie-categories{
-    padding:0 !important;
+  .movie-categories {
+    padding: 0 !important;
   }
 }
+
 @media (max-width: 530px) {
-  .movie-categories{
-    padding:0 !important;
+  .movie-categories {
+    padding: 0 !important;
   }
 }
+
 @media (max-width: 670px) {
-  .movie-categories{
-    padding:0 !important;
+  .movie-categories {
+    padding: 0 !important;
   }
 }
+
 @media (max-width: 750px) {
-  .movie-categories{
-    padding:0 !important;
+  .movie-categories {
+    padding: 0 !important;
   }
-  .banner-img{
+
+  .banner-img {
     height: 80% !important;
     object-fit: cover !important;
   }
-  
-  .info-btn{
+
+  .info-btn {
     display: none !important;
   }
 }
+
 @media (max-width: 975px) {
-  .banner-movie-info{
+  .banner-movie-info {
     width: 100% !important;
-    padding:20px !important;
-    .banner-heading{
+    padding: 20px !important;
+
+    .banner-heading {
       font-size: 28px !important;
     }
   }
-  .movie-categories{
-    padding:0 !important;
+
+  .movie-categories {
+    padding: 0 !important;
   }
 }
+
 @media (max-width: 1400px) {
-  .browse-page{
-    .banner-movie-info{
+  .browse-page {
+    .banner-movie-info {
       width: 60%;
     }
-    .banner-img{
+
+    .banner-img {
       max-height: 800px;
     }
   }
-  
-  .movie-categories{
-    padding:0 !important;
+
+  .movie-categories {
+    padding: 0 !important;
   }
 }
-
-
-
-
-
-
-
-
-
