--- a/NHH_netflix/src/app/pages/browse/browse.component.html
+++ b/NHH_netflix/src/app/pages/browse/browse.component.html
@@ -4,13 +4,13 @@
     <!-- banner -->
     <div class="banner">
         <img class="banner-img" [src]="tmcbConfig.imagePath + bannerMovie.poster_path" alt="movie">
-        
-        <!-- @if(bannerMovie && bannerMovie.videoKey){
+
+
+        <!-- @if(bannerMovie && bannerMovie.videoKey){ 
             <iframe
          class="banner-video"
          [src]="domSanitise.bypassSecurityTrustResourceUrl('https://www.youtube.com/embed/' + bannerMovie.videoKey + '?autoplay=1&mute=1&showinfo=0&controls=0')"
          frameborder="0"></iframe>
-            
         }
         @else{
         <img class="banner-img" [src]="tmcbConfig.imagePath + bannerMovie.poster_path" alt="movie">
@@ -18,27 +18,50 @@
         <div class="banner-movie-info">
             <h4 class="banner-heading text-gray-50">{{bannerMovie.title}}</h4>
             <p class="banner-description">{{bannerMovie.overview}}</p>
-            <div class="flex items-center"> 
-            <div class="banner-action">
-                <button class="play-btn flex">
-                    <mat-icon>play_arrow</mat-icon>
-                    <span style="padding:2px">Play</span>
-                </button>
-                <button class="info-btn flex" (click)="openSignUpForm()"> 
-                    <mat-icon>error_outline</mat-icon>
-                    <button class="px-2" style="padding-top:2px" mat-button >More Info</button> 
-                </button>
+            <div class="flex items-center">
+                <div class="banner-action">
+                    <button class="play-btn flex">
+                        <mat-icon>play_arrow</mat-icon>
+                        <span style="padding:2px">Play</span>
+                    </button>
+                    <button class="info-btn flex" (click)="openSignUpForm()">
+                        <mat-icon>error_outline</mat-icon>
+                        <button class="px-2" style="padding-top:2px" mat-button>More Info</button>
+                    </button>
+                </div>
             </div>
         </div>
-        </div>
+
     </div>
+    <div class="volume" (click)="toggleMute()">
+        @if(isMuted){
+        <div class="icon_volume">
+            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
+                class="bi bi-volume-down-fill text-white" viewBox="0 0 16 16">
+                <path
+                    d="M9 4a.5.5 0 0 0-.812-.39L5.825 5.5H3.5A.5.5 0 0 0 3 6v4a.5.5 0 0 0 .5.5h2.325l2.363 1.89A.5.5 0 0 0 9 12zm3.025 4a4.5 4.5 0 0 1-1.318 3.182L10 10.475A3.5 3.5 0 0 0 11.025 8 3.5 3.5 0 0 0 10 5.525l.707-.707A4.5 4.5 0 0 1 12.025 8" />
+            </svg>
+        </div>
+        }
+        @else{
+        <div class="icon_volume">
+            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
+                class="bi bi-volume-mute-fill text-white " viewBox="0 0 16 16">
+                <path
+                    d="M6.717 3.55A.5.5 0 0 1 7 4v8a.5.5 0 0 1-.812.39L3.825 10.5H1.5A.5.5 0 0 1 1 10V6a.5.5 0 0 1 .5-.5h2.325l2.363-1.89a.5.5 0 0 1 .529-.06m7.137 2.096a.5.5 0 0 1 0 .708L12.207 8l1.647 1.646a.5.5 0 0 1-.708.708L11.5 8.707l-1.646 1.647a.5.5 0 0 1-.708-.708L10.793 8 9.146 6.354a.5.5 0 1 1 .708-.708L11.5 7.293l1.646-1.647a.5.5 0 0 1 .708 0" />
+            </svg>
+
+        </div>
+        }
+    </div>
+
     <!-- categories movie -->
     <div class="movie-categories px-16 relative z-50 -mt-40">
-        <app-movie-category [title]="'Trending'" [movieList]="popularMovies"></app-movie-category>
+        <!-- <app-movie-category [title]="'Trending'" [movieList]="popularMovies"></app-movie-category> -->
         <!-- <app-movie-category [title]="'Playlist'" [movieList]="nowPlayMovies"></app-movie-category>
         <app-movie-category [title]="'Top Rated'" [movieList]="topRateMovies"></app-movie-category>
-        <app-movie-category [title]="'Upcoming'" [movieList]="upComingMovies"></app-movie-category> -->
-        <!-- <app-movie-category [title]="'Now playing'" [movieList]="nowPlayMovies"></app-movie-category>
+        <app-movie-category [title]="'Upcoming'" [movieList]="upComingMovies"></app-movie-category>
+        <app-movie-category [title]="'Now playing'" [movieList]="nowPlayMovies"></app-movie-category>
         <app-movie-category [title]="'Coming'" [movieList]="upComingMovies"></app-movie-category> -->
     </div>
     <!-- footer -->
